# AICodeAgent

./: .gitignore  .pre-commit-config.yaml  README.md  create_snapshot.py  demo_quickstart.sh  main copy.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tests.py
code_to_fix/calculator/: tests.py
functions/: call_function.py  functions_schemas.py  get_files_info.py  run_python.py  write_file.py
functions/internal/: clear_output_dirs.py  get_secure_path.py  get_versioned_path.py  init_run_session.py  make_human_readable_diff.py  prev_proposal.py  prev_run_summary_path.py  reset_test_env.py  save_backup.py  save_diffs.py  save_file.py  save_file_old.py  save_last_run_info.py  save_logs.py  save_run_info.py  save_summary_entry.py
functions/llm_calls/: apply_changes.py  conclude_edit.py  get_file_content.py  get_files_info.py  run_python.py  write_file.py  write_file_confirmed.py  write_file_preview.py
manual_tests/: test_llm_functions.py  test_save_function.py
src/: main.py
src/aicodeagent/: cli.py  llm_client.py  main.py  old_main.py  pipeline.py
src/functions/: functions_schemas.py
tests/: conftest.py  test_apply_changes.py  test_conclude_edit.py  test_general.py  test_get_file_content.py  test_get_file_info.py  test_get_files_info.py  test_llm_functions.py  test_propose_changes.py  test_run_python_file.py  test_save_function.py  test_write_file.py  test_write_file_confirmed.py  test_write_preview.py
tests/Test_legacy/: system_prompt_old.txt  test_save_function_legacy.py
tools/: create_snapshot.py  messages.json  save_canned.py
(+65 files in other folders)
